--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,6 +33,7 @@ jobs:
       with:
         name: tf.state
         path: ${{ env.WORKDIR }}
+      continue-on-error: true # since initially there won't be anything stored
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
