--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,6 +11,8 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     environment: production
+    
+    #using env secrets is the prefered approach for CI/CD tools. AZ login only works for user accounts and not for service principals.
     env:
       ARM_CLIENT_ID: "${{ secrets.ARM_CLIENT_ID }}"
       ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
@@ -28,7 +30,7 @@ jobs:
       uses: actions/checkout@v2
       
     # This should really be done against a remote backend like Terraform Cloud or an Azure Storage Account
-    - name: Download tf-state
+    - name: Download Terraform state
       uses: actions/download-artifact@v2.0.10
       with:
         name: terraform.tfstate
@@ -57,7 +59,10 @@ jobs:
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve
       
-    - name: Publish tf-state
+    - name: LS
+      run: ls -lha
+      
+    - name: Publish Terraform State
       uses: actions/upload-artifact@v2.2.4
       with:
         name: terraform.tfstate
