--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,9 +30,12 @@ jobs:
       uses: actions/checkout@v2
       
     # This should really be done against a remote backend like Terraform Cloud or an Azure Storage Account
-    - name: Download Terraform state
-      uses: actions/download-artifact@v2.0.10
+    - name: Download artifact
+      uses: dawidd6/action-download-artifact@v2
       with:
+        workflow: terraform.yml
+        workflow_conclusion: success
+        branch: master
         name: terraform.tfstate
       continue-on-error: true # since initially there won't be anything stored
 
