--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,12 +30,14 @@ jobs:
       uses: actions/checkout@v2
       
     # This should really be done against a remote backend like Terraform Cloud or an Azure Storage Account
+    # Normally you don't download artifacts across workflow runs. Doing it this way is very brittle to get the latest state.  
+    # I tired to fix this by only pulling from successful runs against main.
     - name: Download artifact
       uses: dawidd6/action-download-artifact@v2
       with:
         workflow: terraform.yml
         workflow_conclusion: success
-        branch: master
+        branch: main
         name: terraform.tfstate
       continue-on-error: true # since initially there won't be anything stored
 
