--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,7 +18,7 @@ jobs:
       ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
       ARM_SUBSCRIPTION_ID: "${{ secrets.ARM_SUBSCRIPTION_ID }}"
       ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
-      GITHUB_OWNER: "${{ env.GITHUB_REPOSITORY_OWNER }}"
+      GITHUB_OWNER: "${{ github.repository_owner }}"
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
