--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -63,7 +63,7 @@ jobs:
 
     - name: Check For Changes
       run: echo found changes
-      if: ${{ steps.tf-plan.outputs.exitcode = 2}}      
+      if: ${{ steps.tf-plan.outputs.exitcode }} = 2      
 
       # On push to main, build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
