--- a/.github/workflows/tf-validate.yml
+++ b/.github/workflows/tf-validate.yml
@@ -5,9 +5,8 @@ on:
 
 jobs:
   terraform-plan:
-    name: 'Terraform Plan'
+    name: 'Terraform Check'
     runs-on: ubuntu-latest
-    environment: production
     
     steps:
     # Checkout the repository to the GitHub Actions runner
