play with branding

--- a/.github/workflows/tf-validate.yml
+++ b/.github/workflows/tf-validate.yml
@@ -3,6 +3,10 @@ name: 'Terraform Check'
 on:
   push:
 
+branding:
+  icon: 'check-square'  
+  color: 'orange'
+
 jobs:
   terraform-plan:
     name: 'Terraform Check'
