--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,9 +73,12 @@ jobs:
       run: |
         TERRAFORM_PLAN=$(terraform show -no-color tfplan)
         echo "## Terraform Plan Output" >> $GITHUB_STEP_SUMMARY
+        echo "<details><summary>Click to expand</summary>" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
         echo '```terraform' >> $GITHUB_STEP_SUMMARY
         echo "$TERRAFORM_PLAN" >> $GITHUB_STEP_SUMMARY
         echo '```' >> $GITHUB_STEP_SUMMARY
+        echo "</details>" >> $GITHUB_STEP_SUMMARY
       
     # If this is a PR post the changes
     - name: Push Terraform Output to PR
