--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,6 +57,8 @@ jobs:
         if [ $exitcode -eq 1 ]; then
           echo Terraform Plan Failed!
           exit 1
+        else 
+          exit 0
         fi
         
     # Save plan to artifacts  
