--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,7 +50,10 @@ jobs:
     - name: Terraform Plan
       id: tf-plan
       run: |
-        terraform plan -detailed-exitcode -no-color -out tfplan ; export exitcode=$?
+        terraform plan -detailed-exitcode -no-color -out tfplan ; export exitcode=$? || exit 0
+        echo "got here"
+        echo "exit code: $exitcode"
+        
         echo "::set-output name=exitcode::$exitcode"
         
         if [ $exitcode -eq 1 ]; then
