--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -95,6 +95,8 @@ jobs:
     - name: Push Terraform Output to PR
       if: github.ref != 'refs/heads/main'
       uses: actions/github-script@v2
+      env:
+        SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
       with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -102,7 +104,7 @@ jobs:
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                body: "${{ steps.tf-plan-string.outputs.summary }}"
+                body: ${process.env.SUMMARY}
              })
 
   terraform-apply:
