--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -100,11 +100,12 @@ jobs:
       with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const body = `${process.env.PLAN}`;
             github.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                body: ${process.env.SUMMARY}
+                body: body
              })
 
   terraform-apply:
