--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -100,7 +100,7 @@ jobs:
       with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const body = `${process.env.PLAN}`;
+            const body = `${process.env.SUMMARY}`;
             github.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
