--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -84,7 +84,12 @@ jobs:
         echo '```' >> tf.string
         echo "</details>" >> tf.string
         
-        echo "::set-output name=summary::$(cat tf.string)"
+        SUMMARY=$(cat tf.string)
+        SUMMARY="${SUMMARY//'%'/'%25'}"
+        SUMMARY="${SUMMARY//$'\n'/'%0A'}"
+        SUMMARY="${SUMMARY//$'\r'/'%0D'}"
+        
+        echo "::set-output name=summary::$SUMMARY"
 
     # Publish Terraform Plan as task summary
     - name: Publish Terraform Plan to Task Summary
