add explicit permission for pull-requests write

--- a/.github/workflows/tf-plan-apply.yml
+++ b/.github/workflows/tf-plan-apply.yml
@@ -12,6 +12,7 @@ on:
 permissions:
   id-token: write
   contents: read
+  pull-requests: write
 
 #These environment variables are used by the terraform azure provider to setup OIDD authenticate. 
 env:
